--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-# barbygirl76.github.io
-Creazione di una pagina web
-
-Questo è il file readme che conviene sempre includere
+<html lang = "it">
+  <head>
+    <title> Pagina Web e GitHub</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Pagina Web con GitHub">
+    <meta name="keywords" content="Scuola, studenti, docenti, materie">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <h1>GitHub per la didattica</h1>
+    <a href="page2.html">Collegamento alla seconda pagina di prova</a>
+  </body>
+</html>
+                                   
